Домашняя работа 7
Добавил в проект зависимость spring-boot-starter-security и реализовал Basic Authentication

Добавил регистрацию пользователей в приложении и организовал хранение логинов/паролей в БД.

Пользователь с ролью ADMIN создается в скрипте миграции.

Тесты минус
