# SpringBootApp/src/main/java/ru/khodov/springbootapp/dto/UserDto.java
@@ -1,0 +1,6 @@
+package ru.khodov.springbootapp.dto;
+
+
+
+public record UserDto(String username, String password) {
+}
